--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "20.17.31",
     "@types/react": "19.1.2",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
