--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.9.2",
     "motion": "^11.16.4",
     "next": "15.1.4",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-scroll": "^1.9.3",
     "react-tsparticles": "^2.12.2",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "20.17.31",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "@types/react-vertical-timeline-component": "^3.3.6",
