--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.9.2",
     "motion": "^11.16.4",
-    "next": "15.1.4",
+    "next": "^16.1.1",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-scroll": "^1.9.3",
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.8.3"
